--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   background-color: #0f0d13;
+}
+
+#app * {
+  border: 1px solid white;
 }
 
 #app {
@@ -8,4 +18,20 @@ body {
     "A B"
     "A C";
   gap: 32px;
+}
+
+#player-1 {
+  grid-area: A;
+}
+
+#player-2 {
+  grid-area: B;
+}
+
+#player-3 {
+  grid-area: C;
+}
+
+.player {
+  background-color: #2a2121;
 }
