--- a/style.css
+++ b/style.css
@@ -8,9 +8,13 @@ body {
   background-color: #0f0d13;
 }
 
-#app * {
-  border: 1px solid white;
+body * {
+  font-family: "Roboto", sans-serif;
 }
+
+/* #app * {
+  border: 1px solid white;
+} */
 
 #app {
   display: grid;
@@ -20,6 +24,7 @@ body {
     "A C";
   gap: 32px;
   place-content: center;
+  height: 100vh;
 }
 
 #player-1 {
@@ -49,4 +54,17 @@ body {
 .player {
   background-color: #2a2141;
   padding: 28px;
+}
+
+.info {
+  color: #e1e1e6;
+}
+
+info h1 {
+  font-size: 24px;
+  color: #e1e1e6;
+}
+
+info p {
+  opacity: 0.67;
 }
