--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 body {
@@ -11,10 +13,6 @@ body {
 body * {
   font-family: "Roboto", sans-serif;
 }
-
-/* #app * {
-  border: 1px solid white;
-} */
 
 #app {
   display: grid;
@@ -30,21 +28,26 @@ body * {
 #player-1 {
   grid-area: A;
   padding: 50px 38px;
-  width: fit-content;
-}
-
-#player-1 img {
-  width: 190px;
-  height: 190px;
-  opject-fit: cover;
 }
 
 #player-1 .wrapper {
   width: 190px;
 }
 
+#player-1 img {
+  width: 190px;
+  height: 190px;
+  object-fit: cover;
+  border-radius: 6px;
+}
+
+#player-1 .info {
+  margin-top: 28px;
+}
+
 #player-2 {
   grid-area: B;
+  height: fit-content;
 }
 
 #player-3 {
@@ -54,17 +57,90 @@ body * {
 .player {
   background-color: #2a2141;
   padding: 28px;
+  border-radius: 10px;
+}
+
+.player img {
+  width: 84px;
+  height: 84px;
+  object-fit: cover;
+  border-radius: 6px;
+}
+
+.info-wrapper {
+  display: flex;
+  gap: 28px;
 }
 
 .info {
   color: #e1e1e6;
+  gap: 9.6px;
 }
 
-info h1 {
+.info h1 {
   font-size: 24px;
-  color: #e1e1e6;
+  margin-bottom: 9.6px;
 }
 
-info p {
+.info p {
   opacity: 0.67;
+}
+
+.controls {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 28px;
+}
+
+.horizontal .controls {
+  padding-inline: 44px;
+}
+
+.track {
+  margin-top: 28px;
+  position: relative;
+}
+
+.track::before {
+  content: "";
+  height: 6px;
+  width: 100%;
+  display: block;
+  background: #d9d9d9;
+  opacity: 0.3;
+  border-radius: 10px;
+  position: absolute;
+}
+
+.track::after {
+  content: "";
+  height: 6px;
+  width: 85%;
+  display: block;
+  background: #d9d9d9;
+  border-radius: 10px;
+}
+
+.time {
+  font-size: 14px;
+  color: #c4c4cc;
+  opacity: 0.7;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 9.6px;
+}
+
+@media (max-width: 670px) {
+  #app {
+    display: flex;
+    flex-direction: column;
+    max-width: 270px;
+    margin: auto;
+    height: auto;
+    padding-block: 60px;
+  }
+
+  .horizontal .controls {
+    padding-inline: 30px;
+  }
 }
